# proxmox-vm-scripts

./: .gitignore  AGENTS.md  Cargo.toml  README.md  vmctl.example.toml  vmctl.toml
.gitea/workflows/: apply.yaml  ci.yaml
crates/backend/: Cargo.toml
crates/backend-native/: Cargo.toml
crates/backend-terraform/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/hook-schema/: Cargo.toml
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/import/: Cargo.toml
crates/modules/: AGENTS.md  Cargo.toml
crates/planner/: Cargo.toml
crates/provision/: Cargo.toml
crates/resources/: Cargo.toml
modules/gitea/: module.toml  service.toml
packs/roles/: kodi_htpc.toml  media_stack.toml  tailscale_gateway.toml
packs/scripts/: bootstrap-arr.sh  bootstrap-download-unpack.sh  bootstrap-homarr.sh  bootstrap-jellio.sh  bootstrap-jellyfin-discovery.sh  bootstrap-jellyfin-plugins.sh  bootstrap-jellyfin.sh  bootstrap-jellysearch.sh  bootstrap-jellyseerr.sh  bootstrap-jellystat.sh  bootstrap-kodi-jellyfin.sh  bootstrap-media.sh  bootstrap-node.sh  bootstrap-qbittorrent.sh  bootstrap-recyclarr.sh  bootstrap-streamyfin.sh  (+3 more)
plans/: config-and-stremio-tizen-fixes-plan.md  gitea-runner-integration.md  jellyfin-streaming-stack-plan.md  media-download-pipeline-fix-plan.md  remote-modules-architecture.md  seerr-request-flow-tizen-plan.md  service-hostnames-plan.md  sources-syntax-refactor.md  sso-authelia-plan.md  ui-routing-plan.md  vmctl-hybrid-plan-packs.md
scripts/: create-media-vm.sh  media-stack-cleanup.sh  proxmox-host-serve-ui.sh
(+112 files in other folders)
