[package]
name = "vmctl-hooks"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vmctl-hook-schema.workspace = true
vmctl-config.workspace = true
vmctl-domain.workspace = true
vmctl-resources.workspace = true
vmctl-services.workspace = true
vmctl-util.workspace = true
